plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'org.acc.service.sdk'
version = '1.0.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation "org.json:json:20231013"
    implementation "com.googlecode.libphonenumber:libphonenumber:8.13.44"

    implementation "org.web3j:core:4.9.8"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.acc.service.sdk' // groupId
            artifactId = 'core'           // artifactId
            version = '1.0.0-SNAPSHOT'       // version
            from components.java
        }
    }
}

test {
    useJUnitPlatform()
}